Substitution for the TruffleFileSystem:
- For the native methods we generally extract the string name from the guest file and convert this string to a TruffleFile which is than used to implement the semantics
- If in the native mehtod we are given a TrufflePath we can extract TruffleFile from a hidden field.
- NewFileChannelHelper to cope with internal API changes of FileChannelImpl.open
- Introduce a helper class for parsing file attributes